# anira

./: .clang-format  .clang-tidy  .clangd  .git-blame-ignore-revs  .gitignore  .gitmodules  CHANGELOG.md  CITATION.cff  CMakeLists.txt  CMakePresets.json  Config.cmake.in  README.md  TODO.md
docs/: CMakeLists.txt  anira-usage.md  benchmark-usage.md
docs/doxygen/: Doxyfile.in
docs/img/: anira-usage.md
docs/sphinx/: about.rst  architecture.rst  benchmarking.rst  changelog.rst  conf.py.in  contributing.rst  custom_backends.rst  custom_preprocessing.rst  examples.rst  getting_started.rst  index.rst  latency.rst  troubleshooting.rst  usage.rst
docs/sphinx/_static/: custom.css
docs/sphinx/api/: classlist.rst  enumlist.rst  filelist.rst  index.rst  namespacelist.rst  structlist.rst  typedeflist.rst
docs/sphinx/api/class/: classanira_1_1BackendBase.rst  classanira_1_1Buffer.rst  classanira_1_1Context.rst  classanira_1_1HighPriorityThread.rst  classanira_1_1InferenceConfig.rst  classanira_1_1InferenceHandler.rst  classanira_1_1InferenceManager.rst  classanira_1_1InferenceThread.rst  classanira_1_1JsonConfigLoader.rst  classanira_1_1LibtorchProcessor.rst  classanira_1_1MemoryBlock.rst  classanira_1_1OnnxRuntimeProcessor.rst  classanira_1_1PrePostProcessor.rst  classanira_1_1RingBuffer.rst  classanira_1_1SessionElement.rst  classanira_1_1TFLiteProcessor.rst  classanira_1_1_memory_block.rst  classanira_1_1_semaphore.rst  classanira_1_1benchmark_1_1ProcessBlockFixture.rst  classanira_1_1benchmark_1_1_process_block_fixture.rst
docs/sphinx/api/enum/: InferenceBackend.rst
docs/sphinx/api/file/: AniraWinExports_8h.rst  BackendBase_8h.rst  Buffer_8h.rst  ContextConfig_8h.rst  Context_8h.rst  HighPriorityThread_8h.rst  HostAudioConfig_8h.rst  HostConfig_8h.rst  InferenceBackend_8h.rst  InferenceConfig_8h.rst  InferenceHandler_8h.rst  InferenceManager_8h.rst  InferenceThread_8h.rst  JsonConfigLoader_8h.rst  LibTorchProcessor_8h.rst  Logger_8h.rst  MemoryBlock_8h.rst  OnnxRuntimeProcessor_8h.rst  PrePostProcessor_8h.rst  ProcessBlockFixture_8h.rst  RealtimeSanitizer_8h.rst  RingBuffer_8h.rst  SessionElement_8h.rst  TFLiteProcessor_8h.rst  anira_8h.rst  benchmark_8h.rst  helperFunctions_8h.rst
docs/sphinx/api/namespace/: namespaceanira.rst  namespaceanira_1_1benchmark.rst  namespacebenchmark.rst
docs/sphinx/api/struct/: structanira_1_1ContextConfig.rst  structanira_1_1HostAudioConfig.rst  (+21 more)
docs/sphinx/examples/: index.rst  simple.rst
docs/sphinx/web-api/: architecture.rst  basic_usage.rst  custom_audio_worklets.rst  custom_inference_backends.rst  custom_pre_post_processing.rst  index.rst  installation_building.rst
docs/typedoc/: package.json  typedoc.json
examples/: CMakeLists.txt
examples/benchmark/: CMakeLists.txt
examples/benchmark/advanced-benchmark/: CMakeLists.txt  ClearCustomProcessor.h  defineAdvancedBenchmark.cpp  defineTestAdvancedBenchmark.cpp
examples/benchmark/bypass-inference-benchmark/: CMakeLists.txt  defineBypassInferenceBenchmark.cpp  defineTestBypassInferenceBenchmark.cpp
examples/benchmark/cnn-size-benchmark/: CMakeLists.txt  defineCNNSizeBenchmark.cpp  defineTestCNNSizeBenchmark.cpp
examples/benchmark/simple-benchmark/: CMakeLists.txt  defineSimpleBenchmark.cpp  defineTestSimpleBenchmark.cpp
examples/benchmark/steerable-nafx-benchmark/: CMakeLists.txt  MyConfig.h  MyPrePostProcessor.h  defineAdvancedBenchmark.cpp  defineBenchmark.cpp  defineSimpleBenchmark.cpp
examples/clap-audio-plugin/: CMakeLists.txt  anira-clap-demo-pluginentry.cpp  anira-clap-demo.cpp  anira-clap-demo.h
examples/clap-audio-plugin/utils/: DryWetMixer.cpp  DryWetMixer.h
examples/desktop/: CMakeLists.txt
examples/desktop/benchmark/: CMakeLists.txt
examples/desktop/clap-audio-plugin/: CMakeLists.txt  anira-clap-demo-pluginentry.cpp  anira-clap-demo.cpp  anira-clap-demo.h
examples/desktop/jack-client/: CMakeLists.txt  JackClient.cpp  JackClient.h  main.cpp
examples/desktop/juce-audio-plugin/: CMakeLists.txt  PluginParameters.cpp  PluginParameters.h  PluginProcessor.cpp  PluginProcessor.h  install.cmake
examples/desktop/minimal-inference/: CMakeLists.txt
examples/embedded/bela/: CMakeLists.txt  SimpleGainConfig.h
examples/juce-audio-plugin/: CMakeLists.txt  Configs.h  MyPrePostProcessor.h  PluginParameters.cpp  PluginParameters.h  PluginProcessor.cpp  PluginProcessor.h
examples/juce-audio-plugin/utils/: Mixer.cpp  Mixer.h  PluginParameters.cpp  PluginParameters.h
examples/minimal-inference/: CMakeLists.txt
examples/minimal-inference/libtorch/: CMakeLists.txt  minimal-libtorch.cpp
examples/minimal-inference/litert/: CMakeLists.txt  minimal-litert.cpp
examples/minimal-inference/onnxruntime/: CMakeLists.txt  minimal-onnxruntime.cpp
examples/minimal-inference/tensorflow-lite/: CMakeLists.txt  minimal-tflite.cpp
extras/: CMakeLists.txt
extras/benchmark/eval-scripts/: anira_benchmark.py
extras/desktop/: CMakeLists.txt
extras/embedded/bela/: CMakeLists.txt
extras/models/cnn/: CNNBypassProcessor.h  CNNConfig.h  CNNPrePostProcessor.h  CnnConfig.h  CnnPrePostProcessor.h  Medium_CNNConfig.h  Small_CNNConfig.h
extras/models/hybrid-nn/: HybridNNBypassProcessor.h  HybridNNConfig.h  HybridNNPrePostProcessor.h
extras/models/model-pool/: SimpleGainConfig.h  SimpleGainConfig.json.in  SimpleStereoGainConfig.h
extras/models/stateful-rnn/: StatefulLstmConfig.h  StatefulLstmPrePostProcessor.h  StatefulRNNConfig.h  StatefulRNNPrePostProcessor.h
extras/models/stateless-rnn/: StatelessLstmConfig.h  StatelessLstmPrePostProcessor.h
test/: CMakeLists.txt  WavReader.h  test_InferenceHandler.cpp  test_StatefulOrdering.cpp  test_WavReader.cpp  test_audiobuffer.cpp  test_inference.cpp  test_wav_reader.cpp  wav_reader.h
test/install/: run_install_test.cmake
test/install/consumer/: CMakeLists.txt  main.cpp
test/scheduler/: test_InferenceManager.cpp  test_ProcessorPooling.cpp  test_SessionElement.cpp  test_UserManagedThread.cpp
test/utils/: test_AudioBuffer.cpp  test_Buffer.cpp  test_JsonConfigLoader.cpp  test_RingBuffer.cpp  test_Semaphore.cpp
(+339 files in other folders)
